--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -16,3 +16,7 @@ msgstr "Stream startet am"
 msgctxt "#30002"
 msgid "Error loading video or no video available."
 msgstr "Fehler beim Laden des Videos oder kein Video verfügbar."
+
+msgctxt "#30003"
+msgid "Missing title"
+msgstr "ohne Namen"
