update and rename to Magentasport use online sports category images fix crash issue with live stream shortcut in Leia remove single event category shortcut, fixes playback issue show error dialog on authentication failure some minor code cleanup

--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -48,3 +48,7 @@ msgstr "Benutzername"
 msgctxt "#30010"
 msgid "Password"
 msgstr "Passwort"
+
+msgctxt "#30011"
+msgid "Error response from server:"
+msgstr "Fehlermeldung vom Server:"
