added possibility to use api version 3

--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -52,3 +52,7 @@ msgstr "Passwort"
 msgctxt "#30011"
 msgid "Error response from server:"
 msgstr "Fehlermeldung vom Server:"
+
+msgctxt "#30020"
+msgid "Api-Version"
+msgstr "Api-Version"
