--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -52,3 +52,7 @@ msgstr ""
 msgctxt "#30011"
 msgid "Error response from server:"
 msgstr ""
+
+msgctxt "#30020"
+msgid "api-version"
+msgstr "api-version"
