fixed error in live section for api v3 + new schedule

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -54,5 +54,5 @@ msgid "Error response from server:"
 msgstr ""
 
 msgctxt "#30020"
-msgid "api-version"
-msgstr "api-version"
+msgid "Api-version"
+msgstr "Api-version"
