--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -60,3 +60,7 @@ msgstr "Api-version"
 msgctxt "#30030"
 msgid "Canceled"
 msgstr "Canceled"
+
+msgctxt "#30040"
+msgid "Login-Method"
+msgstr "Login-Method"
