--- a/resources/language/resource.language.de_de/strings.po
+++ b/resources/language/resource.language.de_de/strings.po
@@ -60,3 +60,7 @@ msgstr "Api-Version"
 msgctxt "#30030"
 msgid "Canceled"
 msgstr "Abgesagt"
+
+msgctxt "#30040"
+msgid "Login-Method"
+msgstr "Login-Methode"
